--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "dev:watch": "nodemon --watch src --ext html,scss,js --exec \"npm run dev\"",
     "dev": "parcel src/index.html src/styles/main.scss src/scripts/main.js",
+    "build": "parcel build src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +14,8 @@
   "type": "commonjs",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.16.1",
-    "parcel": "^2.16.1"
+    "nodemon": "^3.1.10",
+    "parcel": "^2.16.1",
+    "sharp": "^0.33.5"
   }
 }
